<resources>
    <string name="app_name">Pc Build Hub</string>
    <string name="sign_up">Sign Up</string>
    <string name="Easier_sign_up">Its easier to sign up</string>
    <string name="start_with_mobile">Start With Mobile Number</string>
    <string name="start_with_email">Lets get started with email</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login">
        <u>Login</u>
    </string>
    <string name="or">Or</string>
    <string name="login_without_underline">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="associated_email">Enter associated email address with your account</string>
    <string name="send">Send</string>
    <string name="forgot_password_email">We will email you a link to reset your password</string>
    <string name="verification">Verification</string>
    <string name="verification_code_text">Enter the verification code just sent on your email address.</string>
    <string name="verify">Verify</string>
    <string name="accept_terms">I accept the policy and terms</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter Username</string>
    <string name="hello">Hello</string>
    <string name="get_started_mobile">Lete get started with your mobile number</string>
    <string name="mobile_number_hint">Enter Mobile Number</string>
    <string name="start">Start</string>
    <string name="easier_start_mobile">Its always easier and secure to start with just mobile number</string>
    <string name="email_moto">We just need your email address to start your journey with us</string>
    <string name="itemname">Item name</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="post_by">Post By</string>
    <string name="date">Post Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specialization">Gaming Build</string>
    <string name="badge">Amature</string>
    <string name="no_of_posts">Total Posts</string>
    <string name="posts">12</string>
    <string name="total_likes">Total Likes</string>
    <string name="likes">154</string>
    <string name="post_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="welcome">Welcome</string>
    <string name="splash_screen_moto">We are so glad you are here</string>
    <string name="lets_go">Lets Go</string>
    <string name="title_hint">Enter Title</string>

    <!--Components name starts-->
    <string name="motherboard">Motherboard</string>
    <string name="cpu">Cpu</string>
    <string name="ram1">RAM1</string>
    <string name="ram2">RAM2</string>
    <string name="storage_1">Storage - 1</string>
    <string name="storage_2">Storage - 2</string>
    <string name="graphics_card">Graphics Card</string>
    <string name="power_supply">Power Spply</string>
    <string name="casing">Casing</string>
    <string name="monitor">Monitor</string>
    <string name="keyboard">Keyboard</string>
    <string name="mouse">Mouse</string>
    <string name="operating_system">Operating System</string>
    <string name="ups">UPS</string>
    <!--Components name ends-->

    <string name="select_item">Choose</string>
    <string name="category">Category</string>
    <string name="no_data">No Data</string>
    <string name="itemname_sample">Intel 7th Generation Pentium Processor G4560</string>
    <string name="price">Price : $12</string>
    <string name="company_name_sample">AMD</string>
    <string name="arrived_date">Arrived on 12,Jan,2019</string>
    <string name="motherboard_sample">ASRock A320M-HDV R4.0 AMD Motherboard</string>
    <string name="dummyString">Test Data</string>
    <string name="add_new_post">Add New Post</string>
    <string name="total">Total</string>
    <string name="saved">Saved</string>
    <string name="build_your_pc">Build Your PC</string>
    <string name="warning_message">Please select data</string>
    <string name="select_data">Select your option</string>
    <string name="build_your_pc_list">Build PC List</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="please_check_input">Please Check Your Input</string>
</resources>
