<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="@color/md_blue_grey_600">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:background="@color/md_white_1000"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:elevation="16dp">

        <!--Profile image , location and total earning part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:weightSum="5"
            android:id="@+id/userDetailsLayout"
            android:gravity="center">

            <!--Profile ImageView-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/user"
                app:civ_border_width="2dp"
                android:layout_margin="4dp"
                app:civ_border_color="#FFffffff"/>

            <!--Name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/username"
                android:layout_marginTop="4dp"
                android:id="@+id/Name"
                android:textSize="14sp"
                android:padding="2dp"/>

            <!--Name-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/specialization"
                android:id="@+id/Specialist"
                android:textSize="14sp"
                android:padding="2dp"/>

            <!--Location-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_badge"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/badge"
                    android:id="@+id/Location"
                    android:textSize="14sp"
                    android:padding="2dp"/>

            </LinearLayout>

            <!--Number of bid , ongoing work and total earnings details-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <!--Number of bid-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight=".5"
                        android:text="@string/no_of_posts"
                        android:textStyle="bold"
                        android:id="@+id/NumberOfBids"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight=".5"
                        android:text="@string/posts"
                        android:textSize="14sp"/>

                </LinearLayout>

                <!--Number of pending_jobs-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:weightSum="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight=".5"
                        android:text="@string/total_likes"
                        android:textStyle="bold"
                        android:id="@+id/PendingJobs"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight=".5"
                        android:text="@string/likes"
                        android:textSize="14sp"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>





</LinearLayout>