<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".WelcomeHomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:orientation="vertical"
        android:weightSum="4.5">

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:cardCornerRadius="12dp"-->
<!--            android:elevation="4dp"-->
<!--            android:layout_margin="8dp"-->
<!--            android:translationZ="4dp">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="vertical"-->
<!--                android:layout_margin="2dp">-->


<!--            </LinearLayout>-->

<!--        </androidx.cardview.widget.CardView>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1.8">

            <ImageView
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:src="@drawable/logo"
                android:tag="Drawbale"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="1"
            android:layout_weight=".7">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/sign_up"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/md_blue_grey_800"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:text="@string/Easier_sign_up"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:weightSum="2"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/startWithMobile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:elevation="4dp"
                android:translationZ="4dp"
                android:padding="2dp"
                android:clickable="true"
                android:textColor="@color/md_white_1000"
                android:background="@drawable/button_shape_round_corner"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/start_with_mobile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".35"
                android:text="@string/or"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="4dp"
                android:textColor="@color/md_blue_grey_800"/>

            <Button
                android:id="@+id/startWithEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="2dp"
                android:textAllCaps="false"
                android:stateListAnimator="@null"
                android:elevation="4dp"
                android:translationZ="4dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/md_white_1000"
                android:background="@drawable/button_shape_round_corner"
                android:text="@string/start_with_email"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:weightSum="1"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight=".65"
                android:layout_gravity="center|right"
                android:gravity="center|right"
                android:clickable="false"
                android:text="@string/already_have_account"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight=".35"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center|left"
                android:id="@+id/login"
                android:gravity="center|left"
                android:textColor="@color/commonColor"
                android:clickable="true"
                android:textStyle="bold"
                android:text="@string/login"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>