<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainLayout"
            android:layout_gravity=""
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                android:elevation="8dp"
                android:layout_margin="8dp"
                android:translationZ="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight=".4"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:textColor="@color/md_grey_900"
                            android:textSize="14sp"
                            android:text="@string/title"/>
                        <EditText
                            android:id="@+id/title"
                            android:layout_width="0dp"
                            android:layout_weight=".6"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/rectangle_background"
                            android:inputType="text"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:maxLines="1"
                            android:gravity="center"
                            android:textColorHint="@color/md_grey_700"
                            android:hint="@string/title_hint"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textSize="14sp"
                            android:textColor="@color/md_grey_800"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight=".4"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:textColor="@color/md_grey_900"
                            android:textSize="14sp"
                            android:text="@string/category"/>

                        <Spinner
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="0dp"
                            android:layout_weight=".6"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/rectangle_background"
                            android:id="@+id/category"></Spinner>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight=".4"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:textColor="@color/md_grey_900"
                            android:textSize="14sp"
                            android:text="@string/motherboard"/>
                        <Button
                            android:id="@+id/motherboard"
                            android:layout_width="0dp"
                            android:layout_weight=".6"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/rectangle_background_button"
                            android:ellipsize="end"
                            android:scrollHorizontally="true"
                            android:gravity="center"
                            android:clickable="true"
                            android:textColor="@color/md_white_1000"
                            android:text="@string/select_item"
                            android:textAllCaps="false"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textSize="14sp"/>
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>